# pgmq

./: INSTALLATION.md  pyproject.toml
.github/workflows/: crate_ci.yml  extension_upgrade.yml
pgmq-extension/client-tests/: pyproject.toml  upgrade_test.py
pgmq-rs/: Cargo.toml  Makefile  README.md  build.rs
pgmq-rs/examples/: install.rs
pgmq-rs/src/: errors.rs  lib.rs  pg_ext.rs  util.rs
pgmq-rs/src/install/: applied.rs  install_sql.md  mod.rs  script.rs  version.rs
pgmq-rs/src/install/snapshots/: pgmq__install__script__tests__migrations_script__get_scripts.snap  pgmq__install__script__tests__migrations_script__get_scripts_init_migration_already_applied.snap  pgmq__install__script__tests__migrations_script__new.snap  pgmq__install__script__tests__migrations_script__new_script_not_found.snap  pgmq__install__script__tests__parsed_script_name__from_static_str.snap  pgmq__install__script__tests__parsed_script_name__from_static_str_err_first_version_invalid.snap  pgmq__install__script__tests__parsed_script_name__from_static_str_err_missing_both_versions.snap  pgmq__install__script__tests__parsed_script_name__from_static_str_err_missing_first_version.snap  pgmq__install__script__tests__parsed_script_name__from_static_str_err_wrong_extension.snap  pgmq__install__script__tests__parsed_script_name__from_static_str_err_wrong_number_of_dashes.snap  pgmq__install__script__tests__parsed_script_name__init_script.snap  pgmq__install__tests__install_err.snap  pgmq__install__version__tests__sort_and_unique.snap  (+6 more)
pgmq-rs/tests/: pg_ext_integration_test.rs  test_sql.rs
(+5 files in other folders)
